--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
     "express": "~3.4.8",
+    "hiredis": "^0.1.17",
     "jade": "~1.3.0",
     "morgan": "~1.0.0",
+    "redis": "^0.11.0",
     "socket.io": "^1.0.6",
     "static-favicon": "~1.0.0"
   }
